chore: added working pagination and query function for product query
